[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernel-rl"
version = "0.1.0"
description = "Dependencies to run main.py"
requires-python = ">=3.9"
dependencies = [
  "unsloth==2025.9.9",
  "unsloth-zoo==2025.9.12",
  "torch>=2.8.0",
  "triton>=3.4.0",
  "numpy",
  "bitsandbytes",
  "transformers==4.56.2",
  "tokenizers",
  "trl==0.22.2",
  "datasets",
  "wandb"
]
